clang/test/BSC/Negative/Ownership/Owned/owned_pointer_op/owned_pointer_op.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test1() {
    int* _Owned p1;
    int* _Owned p2 = p1 + 1; //expected-error {{invalid operands to binary expression ('int *_Owned' and 'int')}}
    int* _Owned p3 = 1 + p1; //expected-error {{invalid operands to binary expression ('int' and 'int *_Owned')}}
    int* _Owned p4;

    if (p1 == p4) {
        return;
    }
}

void test2() {
    int* _Owned p1; // expected-note {{pointer 'p1' declared here}}
    p1++;           // expected-error {{'++' is not supported on 'int *_Owned'}} expected-note {{declare 'p1' as a raw pointer for pointer arithmetic}}
    int* _Owned p2 = p1[0];  //expected-error {{_Owned pointer type ('int *_Owned') do not support ArraySubscript operate}}
    int x = *p1;
    int* _Owned* p3 = &p1;
}

void test3(int* _Owned a, int* _Owned b) {
    int* _Owned c = a;
    int* _Owned d = c;
    c = b;  //legal BinaryOperator '=' is allowed
}

void test_cascade(int* _Owned a) { // expected-note {{pointer 'a' declared here}}
    _Safe {
        int x = *a++; // expected-error {{'++' is not supported on 'int *_Owned'}} expected-note {{declare 'a' as a raw pointer for pointer arithmetic}}
        (void)x;
    }
}